--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -285,4 +285,9 @@
     80% { bottom: 100%; }
     100% { bottom: -100px; }
   }
+
+  .hexagonal-bg {
+    background-image: url("data:image/svg+xml,%3Csvg width='60' height='52' viewBox='0 0 60 52' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M30 0l25.98 15v30L30 52 4.02 45V15L30 0zM30 8.5L10.5 20v12L30 43.5 49.5 32V20L30 8.5z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-size: 60px 52px;
+  }
 }
